--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,23 @@
 </head>
 <body>
 
+  <% if flash[:notice] %>
+     <div class="alert alert-success">
+       <button class="close" data-dismiss="alert" name="button" type="button">&times;</button>
+       <%= flash[:notice] %>
+     </div>
+     <% elsif flash[:error] %>
+     <div class="alert alert-danger">
+       <button class="close" data-dismiss="alert" name="button" type="button">&times;</button>
+       <%= flash[:error] %>
+     </div>
+     <% elsif flash[:alert] %>
+     <div class="alert alert-warning">
+       <button class="close" data-dismiss="alert" name="button" type="button">&times;</button>
+       <%= flash[:alert] %>
+     </div>
+     <% end %>
+
 <%= yield %>
 
 </body>
