Styled the front end

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,11 @@
  *= require_tree .
  *= require_self
  */
- 
+
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "welcome.scss";
+
+body {
+  background: #fafafa;
+}
