--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -96,9 +96,10 @@ h2 {
 }
 
 
+
 @media only screen
 and (min-width : 45em) {
   .bookmark-list-body {
-    margin-left: 100px;
+    /* margin-left: 100px; */
   }
 }
