--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -1,3 +1,100 @@
-// Place all the styles related to the Topics controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+$main-color: #101010;
+
+h2 {
+  text-align: center;
+}
+
+.intro {
+  font-weight: 300;
+  margin-bottom: 60px;
+}
+
+.tab-list {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.tabs-left {
+  border: none;
+  padding-top: 0px;
+  & > li {
+      margin-bottom: 0px;
+      &.active {
+          border: none;
+        & > a {
+          border: none;
+          &:hover, &:focus {
+            border: none;
+          }
+        }
+      }
+    background: $main-color;
+    border-bottom: none;
+    & > a {
+      color: white;
+      border-radius: 0;
+      &:hover {
+        background: lighten($main-color, 10%);
+        border-color: lighten($main-color, 10%);
+      }
+    }
+  }
+}
+
+.nav-tabs {
+  & > li {
+    & > a {
+      border: none;
+    }
+  }
+}
+
+.tab-content-container {
+  background: white;
+  padding: 20px;
+  margin-left: 1px;
+  .tab-title {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    font-weight: 300;
+  }
+}
+
+.bookmark-list {
+    padding-left: 0px;
+    border: 1px solid #f1f1f1;
+  & > li {
+    list-style: none;
+    margin: 0px;
+    border-bottom: 1px solid #f1f1f1;
+      &:last-child {
+        border-bottom: 0px;
+      }
+    & > a {
+      display: block;
+      padding: 10px 10px;
+      margin: 0 auto;
+      font-size: 18px;
+      font-weight: 300;
+      color: lighten($main-color, 20%);
+        &:hover, &:focus {
+          text-decoration: none;
+          background: lighten($main-color, 90%);
+        }
+        & > span {
+          font-size: 12px;
+          color: lighten($main-color, 50%);
+          font-style: italic;
+        }
+    }
+  }
+}
+
+
+
+@media only screen
+and (min-width : 45em) {
+  .bookmark-list-body {
+    /* margin-left: 100px; */
+  }
+}
