--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,55 +8,59 @@
 </head>
 <body>
 
-  <div class="container">
+<div class="container">
 
+<div class="row">
+  <div class="col-md-12">
     <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "Blocmarks", root_path, class: 'navbar-brand' %>
+<div class="container-fluid">
+<!-- Brand and toggle get grouped for better mobile display -->
+<div class="navbar-header">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+  </button>
+  <%= link_to "Blocmarks", root_path, class: 'navbar-brand' %>
+</div>
+
+<!-- Collect the nav links, forms, and other content for toggling -->
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  <ul class="nav navbar-nav">
+    <li><a href="#">List of bookmarks</a></li>
+    <li><a href="#">Team</a></li>
+  </ul>
+  <form class="navbar-form navbar-left" role="search">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Search">
     </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+  <ul class="nav navbar-nav navbar-right">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#">List of bookmarks</a></li>
-        <li><a href="#">Team</a></li>
+
+    <% if user_signed_in? %>
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.name %> <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Profile</a></li>
+        <li role="separator" class="divider"></li>
+        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-
-
-        <% if user_signed_in? %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.name %> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li role="separator" class="divider"></li>
-            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-
-          </ul>
-        </li>
-        <% else %>
-          <li> <%= link_to "Sign in", new_user_session_path %> </li>
-          <li> <%= link_to "Register", new_user_registration_path %> </li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-  </nav>
+    </li>
+    <% else %>
+      <li> <%= link_to "Sign in", new_user_session_path %> </li>
+      <li> <%= link_to "Register", new_user_registration_path %> </li>
+    <% end %>
+  </ul>
+</div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+  </div>
+</div>
 
     <% if flash[:notice] %>
        <div class="alert alert-success">
