Added a conditional to fix the undefined method error in Heroku

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -38,7 +38,13 @@
                           <span class="meta">Posted
                             <span class="date"> <%= bookmark.created_at %></span>
                             by
-                            <span class="author"> <%= topic.user.name %> </span>
+                            <span class="author">
+                                <% if topic.user.name.present? %>
+                                  <%= topic.user.name %>
+                                <% else %>
+                                  <%= topic.user.email %>
+                              <% end %>
+                            </span>
                           </span>
                       </a>
                     </li>
