--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -28,7 +28,10 @@
         <div class="tab-pane" id="<%= topic.title.parameterize %>">
           <h3 class="tab-title">
             <a href="#">#<%= topic.title.parameterize.capitalize %></a>
+            <%= link_to "Delete Topic", topic_path(topic.id), method: :delete, class: 'btn btn-default btn-xs' %>
+
           </h3>
+
               <% if topic.bookmarks.exists? %>
                   <ul class="bookmark-list">
                     <% topic.bookmarks.each do |bookmark| %>
