--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,4 +1,11 @@
 <%= form_for @topic do |f| %>
-  <%= f.text_field :title, class: "form-control" %>
-  <%= f.submit "Submit", class: 'btn btn-success' %>
+
+  <div class="form-group">
+    <%= f.label :title%>
+    <%= f.text_field :title, class: "form-control", placeholder: "Type the title of the topic" %>
+  </div>
+  <div class="form-group">
+    <%= f.submit :submit, class: "form-control", class:'btn btn-success' %>
+  </div>
+
 <% end %>
