--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -58,7 +58,8 @@
 
   <div class="row">
     <div class="col-xs-2">
-        <a href="#" class="btn btn-primary btn-create">Create Topic</a>
+        <!-- <a href="#" class="btn btn-primary btn-create">Create Topic</a> -->
+        <%= link_to "Create Topic", new_topic_path, class: 'btn btn-primary btn-create' %>
         <a href="#" class="btn btn-primary btn-submit">Submit Link</a>
         <span class="sidebar-disclaimer"><small>Only registered users can create Topics and Links</small></small>
     </div>
