--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Topics#new</h1>
-<p>Find me in app/views/topics/new.html.erb</p>
-
-<%= render "form" %>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Create a new Topic</h3>
+    <%= render "form" %>
+  </div>
+</div>
