--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -27,8 +27,9 @@
         <% @topics.each do |topic| %>
         <div class="tab-pane" id="<%= topic.title.parameterize %>">
           <h3 class="tab-title">
-            <a href="#">#<%= topic.title.parameterize.capitalize %></a>
-            <%= link_to "Delete Topic", topic_path(topic.id), method: :delete, class: 'btn btn-default btn-xs' %>
+            <a href="#">#<%=  %></a>
+            <%= link_to topic.title.parameterize.capitalize , topic_path(topic.id) %>
+            <%= link_to "Delete Topic", topic_path(topic.id), method: :delete, class: 'btn btn-default btn-xs', data: { confirm: "Are you sure?" } %>
 
           </h3>
 
