--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Topics#edit</h1>
-<p>Find me in app/views/topics/edit.html.erb</p>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Edit topic</h3>
+    <%= render "form" %>
+  </div>
+</div>
