--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -29,8 +29,8 @@
           <h3 class="tab-title">
             <a href="#">#<%=  %></a>
             <%= link_to topic.title.parameterize.capitalize , topic_path(topic.id) %>
-            <%= link_to "Delete Topic", topic_path(topic.id), method: :delete, class: 'btn btn-default btn-xs', data: { confirm: "Are you sure?" } %>
-
+            <%= link_to "Update Topic", edit_topic_path(topic.id), class: 'btn btn-primary btn-xs' %>
+            <%= link_to "Delete Topic", topic_path(topic.id), method: :delete, class: 'btn btn-danger btn-xs', data: { confirm: "Are you sure?" } %>
           </h3>
 
               <% if topic.bookmarks.exists? %>
