Added bookmark#show and debugging #new

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Bookmarks#new</h1>
-<p>Find me in app/views/bookmarks/new.html.erb</p>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Submit a new bookmark</h3>
+    <%= render 'form' %>
+    
+  </div>
+</div>
