--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -37,7 +37,7 @@
                   <ul class="bookmark-list">
                     <% topic.bookmarks.each do |bookmark| %>
                     <li>
-                      <a href="#">
+                      <a href=" <%= bookmark_path(bookmark.id) %> ">
                           <%= bookmark.url %> <br>
                           <span class="meta">Posted
                             <span class="date"> <%= bookmark.created_at %></span>
@@ -67,7 +67,7 @@
     <div class="col-xs-2">
         <!-- <a href="#" class="btn btn-primary btn-create">Create Topic</a> -->
         <%= link_to "Create Topic", new_topic_path, class: 'btn btn-primary btn-create' %>
-        <a href="#" class="btn btn-primary btn-submit">Submit Link</a>
+        <%= link_to "Submit Link", new_bookmark_path, class: "btn btn-primary btn-submit" %>
         <span class="sidebar-disclaimer"><small>Only registered users can create Topics and Links</small></small>
     </div>
   </div>
