--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -68,7 +68,7 @@
         <!-- <a href="#" class="btn btn-primary btn-create">Create Topic</a> -->
         <%= link_to "Create Topic", new_topic_path, class: 'btn btn-primary btn-create' %>
         <%= link_to "Submit Link", new_bookmark_path, class: "btn btn-primary btn-submit" %>
-        <span class="sidebar-disclaimer"><small>Only registered users can create Topics and Links</small></small>
+        <!-- <span class="sidebar-disclaimer"><small>Only registered users can create Topics and Links</small> -->
     </div>
   </div>
 
