--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Bookmarks#edit</h1>
-<p>Find me in app/views/bookmarks/edit.html.erb</p>
+<h3>Edit Bookmarks</h3>
+
+<div class="row">
+  <div class="col-md-4">
+    <h3>Submit a new bookmark</h3>
+    <%= render 'form' %>
+  </div>
+</div>
