--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,8 +1,7 @@
-<h3>Edit Bookmarks</h3>
+<h3>Edit Bookmark</h3>
 
 <div class="row">
   <div class="col-md-4">
-    <h3>Submit a new bookmark</h3>
     <%= render 'form' %>
   </div>
 </div>
