--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div class="form-group">
-  <%= f.select :topic_id, @topics.all.collect {|t| [ t.id ] }, { prompt: "Select a topic for your URL" }, class: "form-control" %>
+  <%= f.select :topic_id, @topics.all.collect {|t| [ t.title, t.id ] }, { prompt: "Select a topic for your URL" }, class: "form-control" %>
 </div>
 
 
