--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.name %> <span class="caret"></span></a>
       <ul class="dropdown-menu">
         <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
+        <li><%= link_to "Profile", user_path(current_user.id) %></li>
         <li role="separator" class="divider"></li>
         <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
 
