--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,45 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="row">
+  <div class="col-md-12">
+    <div class="bookmark-container">
+      <h3>Bookmarks of <%= current_user.name %></h3>
+      <h4>My Bookmarks</h4>
+        <ul class="bookmark-list">
+        <% @user_bookmarks.each do |bookmark| %>
+          <li>
+            <a href="#">
+              <%= bookmark.url %> <br>
+              <span class="meta">Posted
+                <span class="date"> <%= time_ago_in_words(bookmark.created_at) %> </span>
+                by
+                <span class="author">
+                    <%= bookmark.user.name %>
+                </span>
+              </span>
+            </a>
+          </li>
+        <% end %>
+        </ul>
+
+        <h4>Bookmarks that I Like</h4>
+
+        <ul class="bookmark-list">
+        <% @liked_bookmarks.each do |bookmark| %>
+          <li>
+            <a href="#">
+                 <!-- TODO Refactor. DRY bookmark.bookmark -->
+              <%= bookmark.bookmark.url %> <br>
+              <span class="meta">Posted
+                <span class="date"> <%= time_ago_in_words(bookmark.created_at) %> </span>
+                by
+                <span class="author">
+                  <!-- TODO Refactor: Show the creator of the bookmark -->
+                    <%= bookmark.user.name %>
+                </span>
+              </span>
+            </a>
+          </li>
+        <% end %>
+        </ul>
+    </div>
+  </div>
+</div>
